nodejs.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
  namespace: default
  labels:
    app: nodejs-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      containers:
      - name: nodejs-server
        image: akashbg3010/nodejs-api_app
        ports:
        - containerPort: 3000
      - name: mongo
        image: mongo
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app-service
  namespace: default
spec:
  selector:
    app: nodejs-app
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
